deploy: gerrited/blog@9c11ebd3b4b585e4836946a1611c67a16635664d

--- a/about/index.html
+++ b/about/index.html
@@ -70,7 +70,7 @@ Technisch Als Static Site Generator für das Blog nutze ich Hugo mit dem Theme h
 <article>
 <h2 class=post-title><a href=https://gerrited.github.io/about/>About</a></h2>
 <div class=post-content>
-<img src=/img/portrait.jpg alt="Gerrit Edzards" class=left style=width:10em;float:right;border-radius:10em;margin-right:1em>
+<img style=float:right;border-radius:10em;margin-right:1em;width:10em sizes="(min-width: 35em) 720px, 100vw" srcset src=/img/portrait.jpg alt="Gerrit Edzards">
 <h3 id=ich>Ich</h3>
 <p>Moin! Meine Name ist Gerrit, Baujahr 86 aus Oldenburg und ich spiele gerne mit Technologie.</p>
 <h3 id=blog>Blog</h3>
