deploy: gerrited/blog@e4d342d6b2931c6bf5b6fde362d23bfc7083f725

--- a/404.html
+++ b/404.html
@@ -36,7 +36,7 @@
 <a href=/ style=text-decoration:none>
 <div class=logo>
 <span class=logo__mark>></span>
-<span class=logo__text>$ cd /home/</span>
+<span class=logo__text>$ kubectl get deploy g11s.cc</span>
 <span class=logo__cursor>
 </span>
 </div>
