deploy: gerrited/blog@dd68ce445accad01ed1e14dd7ac14ea8a6faa13b

--- a/about/index.html
+++ b/about/index.html
@@ -46,7 +46,7 @@ Technisch Als Static Site Generator für das Blog nutze ich Hugo mit dem Theme h
 <a href=/ style=text-decoration:none>
 <div class=logo>
 <span class=logo__mark>></span>
-<span class=logo__text>$ kubectl get deploy g11s.cc</span>
+<span class=logo__text>$ curl g11s.cc</span>
 <span class=logo__cursor>
 </span>
 </div>
