--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Gerrit
 <a href=/ style=text-decoration:none>
 <div class=logo>
 <span class=logo__mark>></span>
-<span class=logo__text>$ kubectl get deploy g11s.cc</span>
+<span class=logo__text>$ curl g11s.cc</span>
 <span class=logo__cursor>
 </span>
 </div>
