--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <meta name=author content="Gerrit ">
 <meta name=description content>
-<meta name=keywords content="homepage,blog">
+<meta name=keywords content="kubernetes,rpi,dotnet,blog">
 <meta name=robots content="noodp">
 <meta name=theme-color content>
 <link rel=canonical href=https://gerrited.github.io/404.html>
@@ -23,11 +23,11 @@
 <meta name=msapplication-TileColor content>
 <meta name=theme-color content>
 <meta itemprop=name content="404 Page not found">
-<meta itemprop=description content="My new homepage or blog">
+<meta itemprop=description content="Blog about .NET, Kubernetes and Raspberry Pi.">
 <meta name=twitter:card content="summary_large_image">
 <meta name=twitter:image content="https://gerrited.github.io">
 <meta name=twitter:title content="404 Page not found">
-<meta name=twitter:description content="My new homepage or blog">
+<meta name=twitter:description content="Blog about .NET, Kubernetes and Raspberry Pi.">
 </head>
 <body>
 <div class=container>
