deploy: gerrited/blog@29d45736ba3367052b5f94d04bcdca6701b18731

--- a/about/index.html
+++ b/about/index.html
@@ -67,9 +67,7 @@ Blog Hier will über kleinere Projekten und Gelerntes schreiben. Vielleicht sind
 <article>
 <h2 class=post-title><a href=https://gerrited.github.io/about/>About</a></h2>
 <div class=post-content>
-<img style=float:right;border-radius:10em;margin-right:1em;width:10em sizes="(min-width: 35em) 720px, 100vw" srcset="/img/portrait_hu27dc73f8af536b7b150468cd150ac991_552316_500x0_resize_q75_box.jpg 500w
-, /img/portrait_hu27dc73f8af536b7b150468cd150ac991_552316_800x0_resize_q75_box.jpg 800w
-, /img/portrait_hu27dc73f8af536b7b150468cd150ac991_552316_1200x0_resize_q75_box.jpg 1200w" src=/img/portrait.jpg alt="Gerrit Edzards">
+<img style=float:right;border-radius:10em;margin-right:1em;width:10em sizes="(min-width: 35em) 720px, 100vw" srcset="/img/portrait_hu2fe63bfeeb5e275d4ae469fe1294c493_80435_500x0_resize_q75_box.jpg 500w" src=/img/portrait.jpg alt="Gerrit Edzards">
 <h3 id=ich>Ich</h3>
 <p>Moin! Meine Name ist Gerrit, Baujahr 86 aus Oldenburg und ich spiele gerne mit Technologie. Seit über 10 Jahren entwickle ich Software mit .NET und beschäftige mich aktuell vor allem mit Themen wie Kubernetes, O11y und GitOps.</p>
 <h3 id=blog>Blog</h3>
