--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
 <meta name=keywords content="kubernetes,rpi,dotnet,blog">
 <meta name=robots content="noodp">
 <meta name=theme-color content>
-<link rel=canonical href=https://gerrited.github.io/404.html>
+<link rel=canonical href=https://g11s.cc/404.html>
 <title>
 404 Page not found :: Gerrit
 </title>
@@ -25,7 +25,7 @@
 <meta itemprop=name content="404 Page not found">
 <meta itemprop=description content="Blog about .NET, Kubernetes and Raspberry Pi.">
 <meta name=twitter:card content="summary_large_image">
-<meta name=twitter:image content="https://gerrited.github.io">
+<meta name=twitter:image content="https://g11s.cc">
 <meta name=twitter:title content="404 Page not found">
 <meta name=twitter:description content="Blog about .NET, Kubernetes and Raspberry Pi.">
 </head>
@@ -60,9 +60,9 @@
 <h1>404</h1>
 <p>Oops, page not found…</p>
 <p class=btn-404>
-<a href=https://gerrited.github.io>
+<a href=https://g11s.cc>
 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 01-2 2H5a2 2 0 01-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg>Home</a>
-<a href=https://gerrited.github.io/posts>
+<a href=https://g11s.cc/posts>
 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-archive"><polyline points="21 8 21 21 3 21 3 8"/><rect x="1" y="3" width="22" height="5"/><line x1="10" y1="12" x2="14" y2="12"/></svg>Archives</a>
 </p>
 </div>
@@ -72,8 +72,9 @@
 <div class=footer__inner>
 <div class=footer__content>
 <span>&copy; 2022</span>
-<span><a href=https://gerrited.github.io>Gerrit</a></span>
-<span><a href=https://gerrited.github.io/posts/index.xml target=_blank title=rss><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 20 20" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 019 9"/><path d="M4 4a16 16 0 0116 16"/><circle cx="5" cy="19" r="1"/></svg></a></span>
+<span><a href=https://g11s.cc>Gerrit</a></span>
+<span><a href=https://creativecommons.org/licenses/by/4.0/ target=_blank rel=noopener>CC BY 4.0</a></span>
+<span><a href=https://g11s.cc/posts/index.xml target=_blank title=rss><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 20 20" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 019 9"/><path d="M4 4a16 16 0 0116 16"/><circle cx="5" cy="19" r="1"/></svg></a></span>
 </div>
 </div>
 <div class=footer__inner>
