--- a/about/index.html
+++ b/about/index.html
@@ -73,7 +73,7 @@ Blog Hier will ich über kleinere Projekten und Gelerntes schreiben. Vielleicht 
 <h3 id=blog>Blog</h3>
 <p>Hier will ich über kleinere Projekten und Gelerntes schreiben. Vielleicht sind die Infos auch für andere nützlich. Wenn du Fragen, Ideen oder Feedback hast, schreib mir einfach. Nutz dafür am besten die Links auf der <a href=/>Homepage</a>.</p>
 <div style=display:flex>
-<div style=margin-right:.5em><a href=https://status.g11s.cc/upptime/history/blog><img src="https://img.shields.io/endpoint?url=https%3A%2F%2Fraw.githubusercontent.com%2Fgerrited%2Fupptime%2Fmaster%2Fapi%2Fblog%2Fuptime.json"></a></div>
+<div style=margin-right:.5em><a href=https://status.g11s.cc/history/blog><img src="https://img.shields.io/endpoint?url=https%3A%2F%2Fraw.githubusercontent.com%2Fgerrited%2Fupptime%2Fmaster%2Fapi%2Fblog%2Fuptime.json"></a></div>
 <div><a href=https://status.g11s.cc/history/blog><img src="https://img.shields.io/endpoint?url=https%3A%2F%2Fraw.githubusercontent.com%2Fgerrited%2Fupptime%2Fmaster%2Fapi%2Fblog%2Fresponse-time.json"></a></div>
 </div>
 <h3 id=technisch>Technisch</h3>
