deploy: gerrited/blog@2aaffee9ebedf63a46e39bc4db88956dfd09c341

--- a/about/index.html
+++ b/about/index.html
@@ -77,7 +77,7 @@ Blog Hier will ich über kleinere Projekte und Gelerntes schreiben. Vielleicht s
 <div><a href=https://status.g11s.cc/history/blog><img src="https://img.shields.io/endpoint?url=https%3A%2F%2Fraw.githubusercontent.com%2Fgerrited%2Fupptime%2Fmaster%2Fapi%2Fblog%2Fresponse-time.json"></a></div>
 </div>
 <h3 id=technisch>Technisch</h3>
-<p>Als Framework für das Blog nutze ich <a href=https://gohugo.io/ title=Hugo>Hugo</a> und gehostet wird es mit GitHub Pages. Die Domain g11s.cc (Numeronym von &ldquo;gerritedzards&rdquo; und .cc weil die Domain frei, günstig und einfach war) habe ich bei <a href=https://namecheap.com>Namecheap</a> gekauft. Zusätzlich nutze ich <a href=https://cloudflare.com>Cloudflare</a> als DNS, damit ich Services des <a href=/posts/2022/01/raspberry-pi-cluster-mit-k3s/>Raspberry Pi Kubernetes Clusters</a> über <a href=https://g11s.cc/posts/2022/01/lokales-k8s-im-internet-verf%C3%BCgbar/>Subdomains aus dem Internet erreichbar</a> machen kann.</p>
+<p>Als Framework für das Blog nutze ich <a href=https://gohugo.io/ title=Hugo>Hugo</a> und gehostet wird es mit GitHub Pages. Die Domain g11s.cc (Numeronym von &ldquo;gerritedzards&rdquo; und .cc weil die Domain frei, günstig und einfach war) habe ich bei <a href=https://namecheap.com>Namecheap</a> gekauft. Zusätzlich nutze ich <a href=https://cloudflare.com>Cloudflare</a> als DNS, damit ich Services des <a href=/posts/2022/01/raspberry-pi-cluster-mit-k3s/>Raspberry Pi Kubernetes Clusters</a> über <a href=/posts/2022/01/lokales-k8s-im-internet-verf%C3%BCgbar/>Subdomains aus dem Internet erreichbar</a> machen kann.</p>
 <p>Weitere Infos im Blog Post <a href=/posts/2022/01/bloggen-mit-hugo-und-github-pages/>Bloggen mit Hugo und GitHub Pages</a>.</p>
 </div>
 </article>
